; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/cxgb3/extr_cxio_hal.c_cxio_hal_init_ctrl_cq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/cxgb3/extr_cxio_hal.c_cxio_hal_init_ctrl_cq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cxio_rdev = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.TYPE_2__*, i32, %struct.rdma_cq_setup*)* }
%struct.rdma_cq_setup = type { i32, i32, i64, i64, i64, i64 }

@RDMA_CQ_SETUP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cxio_rdev*)* @cxio_hal_init_ctrl_cq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cxio_hal_init_ctrl_cq(%struct.cxio_rdev* %0) #0 {
  %2 = alloca %struct.cxio_rdev*, align 8
  %3 = alloca %struct.rdma_cq_setup, align 8
  store %struct.cxio_rdev* %0, %struct.cxio_rdev** %2, align 8
  %4 = getelementptr inbounds %struct.rdma_cq_setup, %struct.rdma_cq_setup* %3, i32 0, i32 5
  store i64 0, i64* %4, align 8
  %5 = getelementptr inbounds %struct.rdma_cq_setup, %struct.rdma_cq_setup* %3, i32 0, i32 4
  store i64 0, i64* %5, align 8
  %6 = getelementptr inbounds %struct.rdma_cq_setup, %struct.rdma_cq_setup* %3, i32 0, i32 0
  store i32 1, i32* %6, align 8
  %7 = getelementptr inbounds %struct.rdma_cq_setup, %struct.rdma_cq_setup* %3, i32 0, i32 3
  store i64 0, i64* %7, align 8
  %8 = getelementptr inbounds %struct.rdma_cq_setup, %struct.rdma_cq_setup* %3, i32 0, i32 2
  store i64 0, i64* %8, align 8
  %9 = getelementptr inbounds %struct.rdma_cq_setup, %struct.rdma_cq_setup* %3, i32 0, i32 1
  store i32 1, i32* %9, align 4
  %10 = load %struct.cxio_rdev*, %struct.cxio_rdev** %2, align 8
  %11 = getelementptr inbounds %struct.cxio_rdev, %struct.cxio_rdev* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32 (%struct.TYPE_2__*, i32, %struct.rdma_cq_setup*)*, i32 (%struct.TYPE_2__*, i32, %struct.rdma_cq_setup*)** %13, align 8
  %15 = load %struct.cxio_rdev*, %struct.cxio_rdev** %2, align 8
  %16 = getelementptr inbounds %struct.cxio_rdev, %struct.cxio_rdev* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = load i32, i32* @RDMA_CQ_SETUP, align 4
  %19 = call i32 %14(%struct.TYPE_2__* %17, i32 %18, %struct.rdma_cq_setup* %3)
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
